<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.pruefstein</groupId>
    <artifactId>pruefstein-parent</artifactId>
    <version>1.0.5-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Prüfstein</name>
    <description>ISO 27001 device compliance: a web app your admins use and a command your colleagues run.</description>

    <!-- One git repository for both modules. Maven would otherwise append each
         module's path to the inherited URLs and have the agent looking for a
         repository at .../pruefstein/agent, so the appending is turned off. -->
    <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false" child.scm.url.inherit.append.path="false">
        <connection>scm:git:https://github.com/explore-de/pruefstein.git</connection>
        <developerConnection>scm:git:git@github.com:explore-de/pruefstein.git</developerConnection>
        <url>https://github.com/explore-de/pruefstein</url>
        <tag>HEAD</tag>
    </scm>

    <!-- The web app and the agent ship as one thing and are versioned as one
         thing. Before this pom they each carried their own copy of the same
         number and the same eight plugins, and nothing but habit kept the
         copies equal. The Quarkus platform is the exception: it stays in each
         module, because `quarkus update` only rewrites the pom of the module
         it runs in and cannot bump a version inherited from here. -->
    <modules>
        <module>web</module>
        <module>agent</module>
    </modules>

    <properties>
        <compiler-plugin.version>3.16.0</compiler-plugin.version>
        <formatter-plugin.version>2.29.0</formatter-plugin.version>
        <impsort-plugin.version>1.13.0</impsort-plugin.version>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus-banner.version>1.6.0</quarkus-banner.version>
        <release-plugin.version>3.3.1</release-plugin.version>
        <skipITs>true</skipITs>
        <surefire-plugin.version>3.6.0</surefire-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Both modules print the same banner; neither should be the one
                 that quietly falls a version behind. -->
            <dependency>
                <groupId>io.quarkiverse.banner</groupId>
                <artifactId>quarkus-banner</artifactId>
                <version>${quarkus-banner.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <!-- Versions and configuration live here; each module decides which of
             these it actually runs. Nothing is declared in <plugins> at this
             level, so the parent itself builds nothing. -->
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                    <configuration>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <configuration>
                        <argLine>@{argLine}</argLine>
                        <systemPropertyVariables>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${surefire-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <argLine>@{argLine}</argLine>
                        <systemPropertyVariables>
                            <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                            <maven.home>${maven.home}</maven.home>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
                <!-- ${project.basedir} resolves per module, so one declaration
                     points both of them at the same formatter/java.xml. -->
                <plugin>
                    <groupId>net.revelc.code.formatter</groupId>
                    <artifactId>formatter-maven-plugin</artifactId>
                    <version>${formatter-plugin.version}</version>
                    <executions>
                        <execution>
                            <phase>validate</phase>
                            <goals>
                                <goal>validate</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <configFile>${project.basedir}/../formatter/java.xml</configFile>
                        <lineEnding>LF</lineEnding>
                    </configuration>
                </plugin>
                <!-- `release:prepare` sets the version across the reactor,
                     tags it vX.Y.Z and pushes — and that tag push is what
                     builds the agent binaries and creates the GitHub release.
                     Maven never publishes anything here: what this project
                     ships is a container image and two native binaries, and
                     neither comes out of a Maven repository, which is why
                     `perform` verifies the tag instead of deploying it. -->
                <plugin>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${release-plugin.version}</version>
                    <configuration>
                        <tagNameFormat>v@{project.version}</tagNameFormat>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <goals>verify</goals>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>net.revelc.code</groupId>
                    <artifactId>impsort-maven-plugin</artifactId>
                    <version>${impsort-plugin.version}</version>
                    <executions>
                        <execution>
                            <phase>validate</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                    <!-- java.* first, then everything else alphabetically, statics
                         last — the order the codebase already mostly followed. -->
                    <configuration>
                        <groups>java.,*</groups>
                        <staticGroups>*</staticGroups>
                        <staticAfter>true</staticAfter>
                        <removeUnused>true</removeUnused>
                        <lineEnding>LF</lineEnding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <artifactId>maven-release-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- Both modules build a native image the same way, and -Dnative means
             the same thing whichever of them you are standing in. -->
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <quarkus.package.jar.enabled>false</quarkus.package.jar.enabled>
                <skipITs>false</skipITs>
                <quarkus.native.enabled>true</quarkus.native.enabled>
            </properties>
        </profile>
    </profiles>
</project>
